# TOE-Dog

./: Bridge.mnn  CMakeLists.txt  LocomotionWithNP3O.mnn  MUJOCO_LOG.TXT  TOE.mnn  adaptation_module_latest-go2.mnn  adaptation_module_latest.mnn  amp.mnn  backflip.mnn  bset.onnx  bset1.onnx  build.sh  encoder_z_input.mnn  encoder_z_input_qua.mnn  go2.mnn  input_onnx.py  legged.mnn  legged_qua.mnn  main.cpp  mainreal.cpp  mainreal_dm.cpp  mujoco.mnn
MNN/: Interpreter.hpp  Tensor.hpp
Prostrate2/: encoder_z_input_qua.mnn  legged_qua.mnn
barrier/: encoder_z_input_qua.mnn
barrier2/: encoder_z_input_qua.mnn  legged_qua.mnn
config/: speed.yaml
fdilink_ahrs_ROS1/: apriltag.sh  cam_usb.sh  dm.sh  motor_dm.sh  use.sh
fdilink_ahrs_ROS1/devel/: .catkin  .rosinstall  setup.sh
fdilink_ahrs_ROS1/devel/include/damiao_msgs/: DmCommand.h  DmState.h
fdilink_ahrs_ROS1/devel/include/unitree_a1/: MotorCmd.h  MotorData.h
fdilink_ahrs_ROS1/devel/lib/apriltag_ros/: apriltag_ros_continuous_node  apriltag_ros_single_image_client_node  apriltag_ros_single_image_server_node
fdilink_ahrs_ROS1/devel/lib/dm_imu/: dm_imu_node
fdilink_ahrs_ROS1/devel/lib/dm_main/: dm_main
fdilink_ahrs_ROS1/devel/lib/fdilink_ahrs/: ahrs_driver  imu_tf
fdilink_ahrs_ROS1/devel/lib/pkgconfig/: apriltag_ros.pc  damiao_msgs.pc  dm_common.pc  dm_controllers.pc  dm_hw.pc  dm_imu.pc  dm_main.pc  fdilink_ahrs.pc  rc_opencv_speed.pc  test.pc  unitree_a1.pc
fdilink_ahrs_ROS1/devel/lib/python3/dist-packages/damiao_msgs/msg/: _DmCommand.py  _DmState.py  __init__.py
fdilink_ahrs_ROS1/devel/lib/python3/dist-packages/unitree_a1/msg/: _MotorCmd.py  _MotorData.py  __init__.py
fdilink_ahrs_ROS1/devel/lib/rc_opencv_speed/: rc_opencv
fdilink_ahrs_ROS1/devel/lib/test/: test_command_publisher
fdilink_ahrs_ROS1/devel/lib/unitree_a1/: Motor_node
fdilink_ahrs_ROS1/devel/share/apriltag_ros/cmake/: apriltag_ros-msg-extras.cmake  apriltag_ros-msg-paths.cmake  apriltag_rosConfig.cmake
fdilink_ahrs_ROS1/devel/share/common-lisp/ros/damiao_msgs/msg/: DmCommand.lisp  DmState.lisp  _package.lisp  _package_DmCommand.lisp  _package_DmState.lisp  damiao_msgs-msg.asd
fdilink_ahrs_ROS1/devel/share/damiao_msgs/cmake/: damiao_msgs-msg-paths.cmake  damiao_msgsConfig.cmake
fdilink_ahrs_ROS1/devel/share/dm_common/cmake/: dm_commonConfig.cmake
fdilink_ahrs_ROS1/devel/share/dm_controllers/cmake/: dm_controllersConfig.cmake
fdilink_ahrs_ROS1/devel/share/dm_hw/cmake/: dm_hwConfig.cmake
fdilink_ahrs_ROS1/devel/share/dm_imu/cmake/: dm_imuConfig.cmake
fdilink_ahrs_ROS1/devel/share/dm_main/cmake/: dm_mainConfig.cmake
fdilink_ahrs_ROS1/devel/share/fdilink_ahrs/cmake/: fdilink_ahrsConfig.cmake
fdilink_ahrs_ROS1/devel/share/rc_opencv_speed/cmake/: rc_opencv_speedConfig.cmake
fdilink_ahrs_ROS1/devel/share/roseus/ros/apriltag_ros/: manifest.l
fdilink_ahrs_ROS1/devel/share/roseus/ros/damiao_msgs/: manifest.l
fdilink_ahrs_ROS1/devel/share/roseus/ros/unitree_a1/: manifest.l
fdilink_ahrs_ROS1/devel/share/test/cmake/: testConfig.cmake
fdilink_ahrs_ROS1/devel/share/unitree_a1/cmake/: unitree_a1-msg-extras.cmake  unitree_a1-msg-paths.cmake  unitree_a1Config.cmake
fdilink_ahrs_ROS1/src/apriltag_ros/apriltag_ros/config/: tags.yaml
fdilink_ahrs_ROS1/src/apriltag_ros/apriltag_ros/launch/: continuous_detection.launch
fdilink_ahrs_ROS1/src/apriltag_ros/cam_info/: camera_calibration.yaml
fdilink_ahrs_ROS1/src/damiao_msgs/: CMakeLists.txt
fdilink_ahrs_ROS1/src/dm_controllers/: CMakeLists.txt  package.xml
fdilink_ahrs_ROS1/src/dm_controllers/config/: dm_motor.yaml
fdilink_ahrs_ROS1/src/dm_controllers/include/dm_controllers/: DmController.h
fdilink_ahrs_ROS1/src/dm_controllers/src/: DmController.cpp
fdilink_ahrs_ROS1/src/dm_hw/: CMakeLists.txt
fdilink_ahrs_ROS1/src/dm_hw/include/dm_hw/: DmHW.h  DmHWLoop.h
fdilink_ahrs_ROS1/src/dm_hw/src/: DmHWLoop.cpp  damiao.cpp
fdilink_ahrs_ROS1/src/dm_imu/launch/: dm_rviz.launch
fdilink_ahrs_ROS1/src/dm_imu/src/: imu_driver.cpp
fdilink_ahrs_ROS1/src/fdilink_ahrs/launch/: ahrs_data.launch
fdilink_ahrs_ROS1/src/fdilink_ahrs/src/: ahrs_driver.cpp
fdilink_ahrs_ROS1/src/rc_opencv_speed/: CMakeLists.txt  package.xml
fdilink_ahrs_ROS1/src/rc_opencv_speed/include/: tracking.cpp
fdilink_ahrs_ROS1/src/rc_opencv_speed/src/: rc_opencv.cpp
fdilink_ahrs_ROS1/src/test/: CMakeLists.txt
fdilink_ahrs_ROS1/src/test/src/: test_node.cpp
go2/xml/: go2.xml
include/FSM/: FSM.h  State_FixedStand.h  State_FreeStand.h  State_Rl.h
include/common/: FSMState.h  enumClass.h  mathTools.h  timeMarker.h  unitreeLeg.h  unitreeRobot.h
include/communication/: motor.h  uart.hpp
include/control/: ControlFrame.h  CtrlComponents.h  Estimator.h  ThreadPool.h  leg_control.h  rl_Inference.h
include/interface/: CmdPanel.h  IOInterface.h  IOMujoco.h  IOREAL.h  IOROS.h  IOROS_dm.h  IOReal.h  IOReal_old.h  IOSIM.h  WirelessHandle.h
include/message/: LowlevelCmd.h  LowlevelState.h
mob_adaptation/: adaptation.mnn
mujoco-3.2.5/: THIRD_PARTY_NOTICES
pd/: adaptation_module_latest.mnn  encoder_z_input_qua.mnn
qua/: legged_qua.mnn
robot/TOE_dog/urdf/: dog.urdf  dog_ros.urdf  doge25.urdf
robot/TOE_dog/xml/: dog.xml  scene.xml
robot/TOE_dog/xml/assets/: TOE_foot.STL
robot/TOE_dog2/urdf/: dog.urdf
robot/TOE_dog2/xml/: dog.xml  scene.xml
robot/a1/xml/: a1.xml  scene.xml
robot/go1/xml/: go1.xml
robot/go2/urdf/: dog.xml
robot/go2/xml/: go.xml  go2.xml  scene.xml
speed/: encoder_z_input_qua.mnn  legged_qua.mnn
speed2/: encoder_z_input_qua.mnn  legged_qua.mnn
src/FSM/: FSM.cpp  State_BalanceTest.cpp  State_FixedStand.cpp  State_FreeStand.cpp  State_Passive.cpp  State_Rl.cpp
src/Gait/: FeetEndCal.cpp  GaitGenerator.cpp  WaveGenerator.cpp
src/common/: unitreeLeg.cpp  unitreeRobot.cpp
src/control/: Estimator.cpp  leg_control.cpp  rl_Inference.cpp
src/interface/: IOMujoco.cpp  IOREAL.cpp  IOROS .cpp  IOROS.cpp  IOROS_dm.cpp  IOReal.cpp  IOReal_old.cpp  IOSIM.cpp  KeyBoard.cpp  WirelessHandle.cpp
toe2/: encoder_z_input_qua.mnn
(+16 files in other folders)
